Issue #3027977 by nod_, huzooka, lauriii, Kami Amiga: Add spacing and font size variables

--- a/css/src/base/elements.css
+++ b/css/src/base/elements.css
@@ -3,7 +3,7 @@
  */
 
 html {
-  font: normal var(--size-font)/var(--size-lineheight) var(--font-family);
+  font: normal 100%/var(--line-height) var(--font-family);
 }
 body {
   color: var(--color-fg);
