--- a/css/src/components/form--text.css
+++ b/css/src/components/form--text.css
@@ -16,7 +16,7 @@
 }
 
 .form-element--small {
-  font-size: var(--size-font-label);
+  font-size: var(--font-size-label);
   padding: calc(0.25rem - var(--size-input-border)) calc(0.5rem - var(--size-input-border));
   line-height: 0.875rem;
   min-height: 1.5rem; /* iOS. */
